fix otp issues on mobile #4464

--- a/src/BlazorUI/Bit.BlazorUI/Components/OtpInput/BitOtpInput.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/OtpInput/BitOtpInput.scss
@@ -35,6 +35,7 @@
     height: spacing(3.75);
     box-sizing: border-box;
     justify-content: center;
+    font-size: spacing(1.75);
     -moz-appearance: textfield; // Firefox
     border-radius: $shape-border-radius;
     background-color: $color-background-primary;
